# bootsig

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: methodology.md
examples/: README.md  baseline.jsonl  candidate.jsonl  generate_runs.py  improved.jsonl  test_python_api.py
scripts/: smoke.sh
src/bootsig/: __init__.py  __main__.py  bootstrap.py  cli.py  compare.py  errors.py  loader.py  pairing.py  permutation.py  power.py  report.py  stats.py
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_compare.py  test_loader.py  test_pairing.py  test_permutation.py  test_power.py  test_readme_example.py  test_report.py  test_stats.py
