[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootsig"
version = "0.1.0"
description = "Tells you whether two eval runs actually differ: bootstrap and permutation tests over JSONL."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["evals", "significance", "bootstrap", "permutation-test", "p-value", "confidence-interval", "jsonl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
bootsig = "bootsig.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/bootsig"
Repository = "https://github.com/JaydenCJ/bootsig"
Issues = "https://github.com/JaydenCJ/bootsig/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
addopts = "-q"
